# elab-doc-sync

./: .elab-sync.yaml.example  .gitignore  AGENT.md  AGENTS.md  AI_discussions.md  CHANGELOG.md  README.md  SPECIFICATION.md  agents.yaml  dev  mcp_server.py  pyproject.toml  specification.md
.codex/: AGENT.md  instructions.md
.githooks/: post-commit
.github/workflows/: test.yml
.kiro/settings/: lsp.json
docs/: 01_README.md  02_SYSTEM_OVERVIEW.md  03_SETUP_GUIDE.md  04_CONFIGURATION.md  05_CLI_REFERENCE.md  06_API_REFERENCE.md  07_SYNC_ENGINE.md  08_PERFORMANCE.md  09_TROUBLESHOOTING.md  10_REQUIREMENTS.md  11_TEST_SPEC.md  12_DESIGN_DECISIONS.md  AI_REVIEW_METHODOLOGY.md  PERFORMANCE.md  REQUIREMENTS.md  TEST_SPEC.md
prompts/: code-review.md  doc-review.md  proposal.md
src/elab_doc_sync/: __init__.py  cli.py  client.py  config.py  sync.py  sync_log.py
template/: .gitignore  README.md  sync.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_sync.py  test_sync_log.py
